refactor: temp remove throws SQLException to avoid exception propagation